--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/nodemailer": "^6.4.7",
     "@types/react": "18.0.37",
     "@types/react-dom": "18.0.11",
+    "@types/react-scroll": "^1.8.7",
     "eslint": "8.38.0",
     "eslint-config-next": "13.3.0",
     "framer-motion": "^10.12.4",
@@ -27,6 +28,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
+    "react-scroll": "^1.8.9",
     "typescript": "5.0.4"
   }
 }
